Fixed customer list table alignments and data truncate

--- a/web/css/_variables.scss
+++ b/web/css/_variables.scss
@@ -5,6 +5,9 @@ $brand-second: rgb(255, 152, 0);
 $brand-second-dull: rgb(255, 171, 64);
 $brand-danger: #e74c3c;
 $brand-null: rgba(158, 158, 158, .2);
+
+//Dulith- Search Filters bar background color
+$ikro-pale-white: #fdfdfd;
 //============== FLAT BUTTON STYLES =========================
 /* #Belize Hole Sea Flat Button
 ==================================================*/
