--- a/web/css/app.stock.css
+++ b/web/css/app.stock.css
@@ -4,7 +4,6 @@
   position: relative;
   vertical-align: top;
   padding: 10px;
-
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 500;
@@ -19,7 +18,6 @@
   text-shadow: none; }
   .flat-button.red {
     background: rgba(158, 158, 158, 0.2); }
-
 
 .flat-button:active {
   top: 1px;
@@ -52,10 +50,9 @@
   font-size: 15px;
   transition: background 0.2s; }
   .btnEdit:hover {
-
-    background-color: #ff9800;
-    color: white; }
-
+    background-color: #ff9800; }
+    .btnEdit:hover, .btnEdit:hover * {
+      color: white; }
 
 #btnRemoveAll {
   height: 32px;
@@ -69,6 +66,8 @@
     background-color: #e74c3c;
     color: white; }
 
+.text-remove-deco {
+  text-decoration: none; }
 
 .sidebar-customer {
   width: 100%; }
